--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevOps Project</title>
-    <title>TOP 10 PLACES TO VISIT IN MALAYSIA </title>
+    <title>TOP 10 PLACES TO VISIT IN MALAYSIA SELAY </title>
 </head>
 <body>
     <h1>1.PETRONAS TWIN TOWER</h1>
